--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "jest": "^28.1.3",
     "ts-jest": "^28.0.8",
     "ts-node-dev": "^2.0.0",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "jsonwebtoken": "^9.0.2",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
